refactor(TOS-38): use StringUtils.isBlank in LlmDocumentClassifier
Replace inline `text == null || text.isBlank()` with the shared
StringUtils.isBlank() utility per reviewer feedback.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>